--- a/Capacitance/Capacitance.tex
+++ b/Capacitance/Capacitance.tex
@@ -85,31 +85,29 @@ The general technique for computing capacitance when Gauss's law applies is:
 
 \begin{enumerate}
 
-  \item Place an equal and opposite amount of charge, $Q$, on the conductors.
+  \item Place a positive charge $Q$ on one conductor and $-Q$ on the other conductor.
 
   \item Use Gauss's law to compute the electric field between the conductors.
 
-  \item Use $V(b)-V(a)=-\int^b_a \mathbf{E}\bfcdot d\mathbf{l}$ to find the potential difference between the conductors.
+  \item Use $V(b)-V(a)=-\int^b_a \mathbf{E}\bfcdot d\mathbf{l}$ to find the potential difference between the conductors. Point $a$ is any point on the negatively charged conductor, and point $b$ is any point on the positively charged conductor.
 
-  \item Use the equation for capacitance to find $C$: $C = Q/|\Delta V| = Q/|V(b)-V(a)|$.
+  \item Compute $C$ using $\ds C = {Q}/{\Delta V} = Q/\big(V(b)-V(a)\big)$. (Note that capacitance should always be positive.)
 
 \end{enumerate}
 
 \subsection{Review of Related Topics}
 
-\textbf{Conductors}
+\textbf{Conductors}: The electric field at any location in space is the superposition (vector sum) of electric fields due to every charge in the universe. For locations inside a conductor, the electric field will be zero. The reason is that charges on or in a conductor are free to move and will position themselves, effectively instantaneously, on the surface in a way that makes the electric field inside the conductor zero.
 
 \begin{enumerate}
 
-  \item When charges are placed on an isolated conductor (meaning it is far away from other charges), they will reconfigure themselves to make the electric field inside the conductor zero.
+  \item If a conductor is isolated (meaning other charges are far enough away that we can ignore their electric fields), the electric field inside it is the superposition of the electric fields due to each charge on the conductor.
 
-  \item If a charged conductor is not isolated, the charges on the conductor will reconfigure themselves to make the electric field inside the conductor zero. The total field in the conductor is the field due to the charges on the conductor and charges elsewhere.
+  \item If a conductor is not isolated, the electric field inside it is the superposition of the electric fields due to each charge on the conductor and all other charges in the universe.
 
 \end{enumerate}
 
-\textbf{Electric Potential Energy and Electric Potential}
-
-The general formula for work is $W_{a\rightarrow b}=\int_a^b \bfvec{F}\bfcdot d\bfvec{l}$. If $\bfvec{F}$ is a conservative force, such as the force due to a static electric field, we define potential energy $U$ according to
+\textbf{Electric Potential Energy and Electric Potential}: The general formula for work is $W_{a\rightarrow b}=\int_a^b \bfvec{F}\bfcdot d\bfvec{l}$. If $\bfvec{F}$ is a conservative force, such as the force due to a static electric field, we define potential energy $U$ according to
 
 $\Delta U = U(b)-U(a) \equiv -W_{a\rightarrow b}$
 
@@ -117,114 +115,89 @@ The force on a charge $q_o$ in an electric field $\bfvec{E}$ is $\bfvec{F}=q_o\b
 
 $\ds U(b)-U(a) = -\int_a^b q_o\bfvec{E}\bfcdot d\bfvec{l}$. Dividing both sides by $q_o$ gives $\ds\frac{U(b)}{q_o}-\frac{U(a)}{q_o} = -\int_a^b\bfvec{E}\bfcdot d\bfvec{l}$
 
-Defining electric potential as $V\equiv U/q_o$ gives $V(b)-V(a) = -\int_a^b\bfvec{E}\bfcdot d\bfvec{l}$
-
-In summary, if you calculate the difference in potential between $a$ and $b$ (in Volts), you can also determine, for a charge $q_o$ moved from $a$ to $b$,
+Defining electric potential as $V\equiv U/q_o$ gives $V(b)-V(a) = -\int_a^b\bfvec{E}\bfcdot d\bfvec{l}$. In summary, if you calculate the difference in potential between $a$ and $b$ (in volts), you can also determine, for a charge $q_o$ moved from $a$ to $b$,
 
 \begin{enumerate}
 
   \item how much work (in Joules) the electric field did on the charge: $-q_o(V(b)-V(a))$, and
 
-  \item the change in the charge's electric potential energy (in Joules): $+q_o(V(b)-V(a))$.
+  \item the change in electric potential energy (in Joules): $+q_o(V(b)-V(a))$.
 
 \end{enumerate}
 
-\ifsolutions\else
-\newpage
-\fi
-
 \section{Parallel Plates}
 
-An equal and opposite amount of charge is placed on two conducting and parallel plates, as shown on the left in the following figure. On the right, a side view of the plates is shown. The area of the plates, $A = w^2$, is much larger than shown, such that the width, $w$, is much larger than the separation distance, $d$.
+An equal and opposite amount of charge is placed on two conducting and parallel plates, as shown on the left in the following figure. On the right, a side view of the plates is shown. The area of the plates, $A = w^2$, is much larger than shown, such that the width, $w$, is much larger than the separation distance, $d$. Assume $Q$ is a positive number.
 
 \input{figures/Parallel_Plate.tikz}
 
 \begin{enumerate}
 
-  \item How will the charges distribute on each of the plates? That is, how much charge is on each of the four faces that have an area $A$? Assume that no charge appears on the other (thin, and having thickness $t$) faces of the plates, which have a much smaller area.
+  \item How will the charges be distributed on each of the plates? That is, how much charge is on each of the four faces that have an area $A$? Assume that no charge appears on the other (thin and having thickness $t$) faces of the plates.
 
-     \ifsolutions
-       {\bf Answer}: The charges will move to the inner faces, as shown in the following diagram. Electric field vectors for the positive and negative charges are shown. Because the charges are on a large plane, the field is independent of distance from the plane. With this charge configuration, inside the conductors, the field due to the positive charges cancels the field due to the negative charges giving a net field of zero.
+        \ifsolutions
+        {\bf Answer}: The charges will move to the inner faces, as shown in the following diagram. Electric field vectors for the positive and negative charges are shown.
 
-       \input{figures/Parallel_Plate_Fields.tikz}
-     \else
-       \vskip 36pt
-     \fi
-     \ifsolutions\else
-     \vskip 36pt
-     \fi
+        \input{figures/Parallel_Plate_Fields.tikz}
+        \else
+        \vskip 36pt
+        \fi
 
-  \item What is the electric field in each of the five regions? (Hint: The magnitude of the field due to charges uniformly distributed on a plane is $|\sigma|/2\epsilon_o$. The field in each region will be the sum of the field due to charges on each plate. Your answer should be such that the electric field inside the conducting plates is zero!)
+  \item What is the electric field in each of the five regions? Assume the charges are uniformly distributed. (Hint: The magnitude of the electric field due to charges uniformly distributed on a large plane is $|\sigma|/2\epsilon_o$. The electric field in each region will be the sum of the electric field due to charges on each plate. Your answer should be such that the electric field inside the conducting plates is zero!)
 
-     \ifsolutions
-       {\bf Answer}: The magnitude of the field due to each charged surface is $|\sigma|/2\epsilon_o$, where $\sigma$ is the surface charge density. The surface charge densities are $\pm Q/A$.  
+        \ifsolutions
+        {\bf Answer}: The magnitude of the field due to each charged surface is $|\sigma|/2\epsilon_o$, where $\sigma$ is the surface charge density. The surface charge densities are $\pm Q/A$.
 
-       \input{figures/Parallel_Plate_Solution.tikz}
+        \input{figures/Parallel_Plate_Solution.tikz}
 
-       From the diagram in the answer to part 1., the electric fields cancel except between the plates where it is 
+        From the diagram in the answer to part 1., the electric fields cancel except between the plates where it is 
 
-       $\ds\frac{|+Q/A|}{2\epsilon_o} + \frac{|-Q/A|}{2\epsilon_o} = \frac{Q}{A\epsilon_o}$
+        $\ds\frac{|+Q/A|}{2\epsilon_o} + \frac{|-Q/A|}{2\epsilon_o} = \frac{Q}{A\epsilon_o}$
 
-       to the left, so
+        to the left, so
 
-       $\ds\bfvec{E}=-\frac{Q}{A\epsilon_o}\ihat$
-     \else
-       \vskip 36pt
-     \fi
-     \ifsolutions\else
-     \vskip 36pt
-     \fi
+        $\ds\bfvec{E}=-\frac{Q}{A\epsilon_o}\ihat$
+        \else
+        \vskip 36pt
+        \fi
 
   \item What is the electric potential difference, $V(d)-V(0)$, between the left and right plate? (Make sure the sign of your result matches your expectation based on the techniques covered in the last activity.)
 
-     \ifsolutions
-       {\bf Answer}: The general equation is
+        \ifsolutions
+        {\bf Answer}: The general equation is
 
-       $\ds V(b)-V(a) = -\int_a^b\bfvec{E}\bfcdot d\bfvec{l}$
+        $\ds V(b)-V(a) = -\int_a^b\bfvec{E}\bfcdot d\bfvec{l}$
 
-       where $b$ is the final position and $a$ is the initial position. Using our variables,
+        where $b$ is the final position and $a$ is the initial position. Using our variables for position,
 
-       $\ds V(d)-V(0) = -\int_0^d\bfvec{E}\bfcdot d\bfvec{l}$
+        $\ds V(d)-V(0) = -\int_0^d\bfvec{E}\bfcdot d\bfvec{l}$
 
-       The electric field is constant, and in the same direction as $x$, so we know the result of the integration will be $\pm Ed=\pm Qd/A\epsilon_o$. Based on techniques covered in the last activity, we expect the potential to be higher at the right plate, so we choose the $+$ option. More formally,
+        The electric field is constant, so we know the result of the integration will be $\pm Ed=\pm Qd/A\epsilon_o$. Based on techniques covered in the last activity, we expect the potential to be higher at the right plate, so we choose the $+$ option. More formally, using $d\mathbf{l}=dx\ihat$  and $\bfvec{E}=-({Q}/{A\epsilon_o})\ihat$ gives
 
-       Using $d\mathbf{l}=dx\ihat$  and $\bfvec{E}=-\frac{Q}{A\epsilon_o}\ihat$ gives
+        $\ds V(d)-V(0) = -\int_0^d\bfvec{E}\bfcdot d\bfvec{l}=-\int_0^d\left[-\frac{Q}{A\epsilon_o}\ihat\right]\bfcdot (dx\ihat)=\frac{Qd}{A\epsilon_o}$
+        \else
+        \vskip 36pt
+        \fi
 
-       $\ds V(d)-V(0) = -\int_0^d\bfvec{E}\bfcdot d\bfvec{l}=-\int_0^d\left[-\frac{Q}{A\epsilon_o}\ihat\right]\bfcdot dx\ihat=\frac{Qd}{A\epsilon_o}$
-     \else
-       \vskip 36pt
-     \fi
-     \ifsolutions\else
-     \vskip 36pt
-     \fi
+  \item Use your answer to 3. to find the capacitance in terms of $\epsilon_o$, $A$, and $d$.
 
-  \item Use your answer to 3. to find the capacitance in terms of $k$, $A$, and $d$.
+        \ifsolutions
+        {\bf Answer}:
 
-     \ifsolutions
-       {\bf Answer}:
+        $$C = \frac{Q}{|\Delta V|} = \frac{Q}{\frac{Qd}{A\epsilon_o}}=\frac{\epsilon_oA}{d}$$
+        \else
+        \vskip 36pt
+        \fi
 
-       \begin{equation}
-     C = \frac{Q}{|\Delta V|} = \frac{Q}{\frac{Qd}{A\epsilon_o}}=\frac{\epsilon_oA}{d}
-     \end{equation}
-     \else
-       \vskip 36pt
-     \fi
-     \ifsolutions\else
-     \vskip 36pt
-     \fi
+  \item (Review question) How much work would the electric field do on a positive charge $q_o$ that is moved from the left plate to the right plate? What would be the change in electric potential energy?
 
-  \item (Review question) How much work would the electric field do on a charge $q_o$ that is moved from the left plate to the right plate? What would be the change in $q_o$'s electric potential energy?
+        \ifsolutions
+        {\bf Answer}: $\ds W=-q_o(V(d)-V(0))=-q_o\frac{Qd}{A\epsilon_o}$. Sign check: The force of the electric field on the positive charge $q_o$ is to the left and the displacement is to the right, so $\bfvec{F}\bfcdot d\bfvec{l}$ will be negative.
 
-     \ifsolutions
-       {\bf Answer}: $\ds W=-q_o\frac{\epsilon_oA}{d}$. Sign check: The force of the field is to the left and the displacement is to the right, so $\bfvec{F}\bfcdot d\bfvec{l}$ will be negative.
-
-       $\ds\Delta U=-W=q_o\frac{\epsilon_oA}{d}$
-     \else
-       \vskip 36pt
-     \fi
-     \ifsolutions\else
-     \vskip 36pt
-     \fi
+        $\ds\Delta U=-W=q_o(V(d)-V(0))=+q_o\frac{Qd}{A\epsilon_o}$
+        \else
+        \vskip 36pt
+        \fi
 
 \end{enumerate}
 
@@ -234,70 +207,153 @@ Charge placed on two spherical conducting shells, the cross--section of which is
 
 \input{figures/Spherical.tikz}
 
-Using Gauss's law and the fact that the electric field inside a conductor must be zero show that
+It can be shown (see challenge questions below) that the surface at $r=a$ will have $-Q$ uniformly distributed on it, and the surface at $r=b$ will have $Q$ uniformly distributed on it. The inner surface of the inner conductor and the outer surface of the outer conductor will not have any charge.
 
 \begin{enumerate}
 
-  \item there can be no charge on the inner surface of the inner conductor,
+  \item What is the electric field in each of the five labeled regions? Region 1. is the empty volume inside of the inner conductor, region 2. is the inner conductor, region 3. is the empty volume between the conductors, region 4. is the outer conductor, and region 5. is the region outside of the outer conductor. (Hint: Use Gauss's law several times; when not zero, the electric field should be proportional to $1/r^2$.)
 
-  \item the charge on the inner surface of the outer conductor is $+Q$, and
+        \ifsolutions
+        \textbf{Answer}: 1. $0\quad$ 2. $0\quad$ 3. $E_r=-Q/4\pi \epsilon_o r^2\quad$ 4. $0\quad$ 5. $0$
+        \else
+        \vskip 72pt
+        \fi
 
-  \item there is no charge on the outer surface of the outer conductor.
+  \item What is the potential difference, $V(b) - V(a)$?
 
-     \ifsolutions
-       \textbf{Answer}: Covered in class.
-     \fi
+        %(Make sure the sign of your result matches your expectation based on the techniques covered in the last activity.)
+
+        \ifsolutions
+        \textbf{Answer}: $\displaystyle V(b)-V(a)=\frac{Q}{4\pi\epsilon_o}\left(\frac{1}{a}-\frac{1}{b}\right)$
+
+        %Sign check: $V(b)-V(a)$ is positive (because $a<b$), which is expected because a postive charge moved from $a$ to $b$ will have a force on it due to $\mathbf{E}$ that is opposite the direction of movement.
+        \else
+        \vskip 72pt
+        \fi
+
+  \item Find the capacitance in terms of $\epsilon_o$, $a$, and $b$.
+
+        \ifsolutions
+        \textbf{Answer}: $\displaystyle C=\frac{Q}{V(b)-V(a)} = \frac{4\pi\epsilon_o}{\frac{1}{a}-\frac{1}{b}}$
+        \else
+        \vskip 72pt
+        \fi
+
+  \item (Review question) How much work would the electric field do on a positive charge $q_o$ that is moved from $r=a$ to $r=b$? What will be the change in electric potential energy?
+
+        \ifsolutions
+        \textbf{Answer}: $-q_o(V(b)-V(a))$ and $q_o(V(b)-V(a))$.
+        \fi
 
 \end{enumerate}
 
-Draw the Gaussian surfaces that you use to answer this question on the diagram above or on a new diagram in the space below.
-
-\ifsolutions\else
 \newpage
-\fi
+
+\textbf{Optional challenge questions}
+
+\input{figures/Spherical.tikz}
+
+Draw the Gaussian surfaces you use to answer each of the following questions on the diagram above or a new diagram in the space below.
+
+Use Gauss's law and the fact that the electric field inside a conductor must be zero to show
 
 \begin{enumerate}
 
-  \item[4.] What is the electric field in each of the 5 labeled regions? Region 1. is the empty volume inside of the inner conductor, region 2. is the inner conductor, region 3. is the empty volume between the conductors, region 4. is the outer conductor, and region 5. is the region outside of the outer conductor. (Hint: Use Gauss's law several times; when not zero, the electric field should be proportional to $1/r^2$.)
+  \item[5.] there can be no charge on the inner surface of the inner conductor,
 
-     \ifsolutions
-       \textbf{Answer}: 1. $0\quad$ 2. $0\quad$ 3. $E_r=-Q/4\pi \epsilon_o r^2\quad$ 4. $0\quad$ 5. $0$
-     \else
-       \vskip 48pt
-     \fi
-     \ifsolutions\else
-     \vskip 48pt
-     \fi
+            \ifsolutions
+            \textbf{Answer}: A Gaussian sphere with a surface inside the inner conductor has $E=0$ on its surface (b/c $E$ inside a conductor is zero). Based on $\oint \bfvec{E}\bfcdot d\mathbf{l}=Q_{\text{encl}}/\epsilon_o$, this implies $Q_{\text{encl}}=0$. (Note that all charges must be on the surface of a conductor, so the only possible location for the charge is on the inner and outer surfaces.)
+            \else
+            \vskip 120pt
+            \fi
 
-  \item[5.] What is the potential difference, $V(b) - V(a)$? (Make sure the sign of your result matches your expectation based on the techniques covered in the last activity.)
+  \item[6.] the charge on the inner surface of the outer conductor is $+Q$, and
 
-     \ifsolutions
-       \textbf{Answer}: $\displaystyle V(b)-V(a)=\frac{Q}{4\pi\epsilon_o}\left(\frac{1}{a}-\frac{1}{b}\right)$
+            \ifsolutions
+            \textbf{Answer}: A Gaussian sphere with its surface inside the outer conductor has $E=0$ on its surface (b/c $E$ inside a conductor is zero). Based on $\oint \bfvec{E}\bfcdot d\mathbf{l}=Q_{\text{encl}}/\epsilon_o$, this implies $Q_{\text{encl}}=0$. We know the charge on the inner conductor must be $-Q$. To make the charge inside this sphere zero, we need $+Q$ on the inner surface of the inner conductor to get $Q_{\text{encl}}=0$.
+            \else
+            \vskip 120pt
+            \fi
 
-       Note that $V(b)-V(a)$ is positive, which is expected because moving from $a$ to $b$ we are moving against the direction of $\mathbf{E}$.
-     \else
-       \vskip 48pt
-     \fi
-     \ifsolutions\else
-     \vskip 48pt
-     \fi
+  \item[7.] there is no charge on the outer surface of the outer conductor.
 
-  \item[6.] Find the capacitance in terms of $k$, $a$, and $b$.
+            \ifsolutions
+            \textbf{Answer}: If the total charge on the outer conductor is $+Q$ and all of it is on its inner surface, but conservation of charge, there is no charge on its outer surface. Recall that charges arrange themselves on a conductor to make the electric field inside all conductors zero. With this charge arrangement, the electric field due to the charges on the outer surface of the inner conductor cancels the electric field due to the charge on the inner surface of the outer conductor for $r>b$.
+            \else
 
-     \ifsolutions
-       \textbf{Answer}: $\displaystyle C=\frac{Q}{V(b)-V(a)} = \frac{4\pi\epsilon_o}{\frac{1}{a}-\frac{1}{b}}$
-     \else
-       \vskip 48pt
-     \fi
-     \ifsolutions\else
-     \vskip 48pt
-     \fi
+            \fi
 
-  \item[7.] (Review question) How much work would the electric field do on a charge $q_o$ that is moved from $r=a$ to $r=b$? What would be the change in $q_o$'s electric potential energy?
+\end{enumerate}
 
-     \ifsolutions
-       \textbf{Answer}: $-q_o(V(b)-V(a))$ and $q_o(V(b)-V(a))$. Check: Work is negative b/c the electric field direction is opposite the direction of movement. PE increases.
-     \fi
+\newpage
+
+\section{Cylindrical}
+
+Charge placed on two long cylindrical conducting shells, the cross--section of which is shown. Both shells have a thickness of $t$. The inner shell has an outer radius of $a$ and a net charge of $-Q$. The outer shell has an inner radius of $b$ and a net charge of $+Q$. Assume that $Q$ is positive and the cylinders have length $L$.
+
+\input{figures/Spherical.tikz}
+
+\input{figures/Cylinder_3D.tikz}
+
+\begin{enumerate}
+
+  \item How will the charges distribute on each surface? (Assume no charge appears on the ends of the cylinders and any surface charge is uniformly distributed.) That is, find the charge density on
+
+    \begin{itemize}
+
+      \item the inner surface of the inner cylinder,
+
+      \item the outer surface of the inner cylinder,
+
+      \item the inner surface of the outer cylinder, and
+
+      \item the outer surface of the outer cylinder.
+
+    \end{itemize}
+
+        \ifsolutions
+        \textbf{Answer}:
+        \fi
+
+\end{enumerate}
+
+\newpage
+
+\input{figures/Spherical.tikz}
+
+The cross--section figure from previous page is repeated above.
+
+\begin{enumerate}
+
+  \item[2.] Given your answer to part 1. of this problem, what is the electric field in each of the five regions? (Hint: Use Gauss's law)
+
+            \ifsolutions
+            \textbf{Answer}:
+            \else
+            \vskip 96pt
+            \fi
+
+  \item[3.] What is the electric potential difference, $V(b)-V(a)$, between the outer an inner cylinder? (Make sure the sign of your result matches your expectation based on the techniques covered in the last activity.)
+
+            \ifsolutions
+            \textbf{Answer}:
+            \else
+            \vskip 96pt
+            \fi
+
+  \item[4.] Find the capacitance in terms of $\epsilon_o$, $L$, $a$, and $b$.
+
+            \ifsolutions
+            \textbf{Answer}:
+            \else
+            \vskip 120pt
+            \fi
+
+  \item[5.] How much work would the electric field do on a charge $q_o$ moved from $r=a$ to $r=b$? What would be the change in $q_o$'s electric potential energy?
+
+            \ifsolutions
+            \textbf{Answer}:
+            \fi
 
 \end{enumerate}
 
