--- a/Capacitance/Capacitance.tex
+++ b/Capacitance/Capacitance.tex
@@ -81,23 +81,23 @@
 
 \subsection{Technique}
 
-The general technique for computing capacitance when Gauss's law applies is:
+A technique for computing capacitance when Gauss's law can be used to compute the electric field is:
 
 \begin{enumerate}
 
-  \item Place a positive charge $Q$ on one conductor and $-Q$ on the other conductor.
+  \item place a positive charge $Q$ on one conductor and $-Q$ on the other conductor;
 
-  \item Use Gauss's law to compute the electric field between the conductors.
+  \item use Gauss's law to compute the electric field between the conductors;
 
-  \item Use $V(b)-V(a)=-\int^b_a \mathbf{E}\bfcdot d\mathbf{l}$ to find the potential difference between the conductors. Point $a$ is any point on the negatively charged conductor, and point $b$ is any point on the positively charged conductor.
+  \item use $V(b)-V(a)=-\int^b_a \mathbf{E}\bfcdot d\mathbf{l}$ to find the potential difference between the conductors. Point $a$ is any point on the negatively charged conductor, and point $b$ is any point on the positively charged conductor; and
 
-  \item Compute $C$ using $\ds C = {Q}/{\Delta V} = Q/\big(V(b)-V(a)\big)$. (Note that capacitance should always be positive.)
+  \item Compute $C$ using $\ds C = {Q}/{\Delta V} = Q/\big(V(b)-V(a)\big)$.
 
 \end{enumerate}
 
 \subsection{Review of Related Topics}
 
-\textbf{Conductors}: The electric field at any location in space is the superposition (vector sum) of electric fields due to every charge in the universe. For locations inside a conductor, the electric field will be zero. The reason is that charges on or in a conductor are free to move and will position themselves, effectively instantaneously, on the surface in a way that makes the electric field inside the conductor zero.
+\textbf{Conductors}: The electric field at any location in space is the superposition (vector sum) of electric fields due to every charge in the universe. For locations inside a conductor, the electric field will be zero. The reason is that charges on or in a conductor are free to move and position themselves, effectively instantaneously, on the surface in a way that makes the electric field inside the conductor zero.
 
 \begin{enumerate}
 
@@ -107,7 +107,7 @@ The general technique for computing capacitance when Gauss's law applies is:
 
 \end{enumerate}
 
-\textbf{Electric Potential Energy and Electric Potential}: The general formula for work is $W_{a\rightarrow b}=\int_a^b \bfvec{F}\bfcdot d\bfvec{l}$. If $\bfvec{F}$ is a conservative force, such as the force due to a static electric field, we define potential energy $U$ according to
+\textbf{Electric Potential Energy and Electric Potential}: The general formula for work is $W_{a\rightarrow b}=\int_a^b \bfvec{F}\bfcdot d\bfvec{l}$. If $\bfvec{F}$ is a conservative force, such as the force on a charge due to a electric field, we define potential energy $U$ according to
 
 $\Delta U = U(b)-U(a) \equiv -W_{a\rightarrow b}$
 
@@ -127,13 +127,13 @@ Defining electric potential as $V\equiv U/q_o$ gives $V(b)-V(a) = -\int_a^b\bfve
 
 \section{Parallel Plates}
 
-An equal and opposite amount of charge is placed on two conducting and parallel plates, as shown on the left in the following figure. On the right, a side view of the plates is shown. The area of the plates, $A = w^2$, is much larger than shown, such that the width, $w$, is much larger than the separation distance, $d$. Assume $Q$ is a positive number.
+An equal and opposite amount of charge is placed on two conducting and parallel plates, as shown on the left in the following figure. On the right, a side view of the plates is shown. The area of the plates, $A = w^2$, is much larger than shown, so the width, $w$, is much larger than the separation distance, $d$. Assume $Q$ is positive.
 
 \input{figures/Parallel_Plate.tikz}
 
 \begin{enumerate}
 
-  \item How will the charges be distributed on each of the plates? That is, how much charge is on each of the four faces that have an area $A$? Assume that no charge appears on the other (thin and having thickness $t$) faces of the plates.
+  \item How will the charges be distributed on each of the plates? That is, how much charge is on each of the four large faces with area $A$? Assume the charges are uniformly distributed on these four faces and that no charge appears on the thin edge faces with thickness $t$.
 
         \ifsolutions
         {\bf Answer}: The charges will move to the inner faces, as shown in the following diagram. Electric field vectors for the positive and negative charges are shown.
@@ -143,7 +143,7 @@ An equal and opposite amount of charge is placed on two conducting and parallel 
         \vskip 36pt
         \fi
 
-  \item What is the electric field in each of the five regions? Assume the charges are uniformly distributed. (Hint: The magnitude of the electric field due to charges uniformly distributed on a large plane is $|\sigma|/2\epsilon_o$. The electric field in each region will be the sum of the electric field due to charges on each plate. Your answer should be such that the electric field inside the conducting plates is zero!)
+  \item What is the electric field in each of the five regions? (Hint: The magnitude of the electric field due to charges uniformly distributed on a large plane is $|\sigma|/2\epsilon_o$. The electric field in each region will be the sum of the electric field due to charges on each plate. Your answer should be such that the electric field inside the conducting plates is zero!)
 
         \ifsolutions
         {\bf Answer}: The magnitude of the field due to each charged surface is $|\sigma|/2\epsilon_o$, where $\sigma$ is the surface charge density. The surface charge densities are $\pm Q/A$.
@@ -152,11 +152,9 @@ An equal and opposite amount of charge is placed on two conducting and parallel 
 
         From the diagram in the answer to part 1., the electric fields cancel except between the plates where it is 
 
-        $\ds\frac{|+Q/A|}{2\epsilon_o} + \frac{|-Q/A|}{2\epsilon_o} = \frac{Q}{A\epsilon_o}$
+        $$\frac{|+Q/A|}{2\epsilon_o} + \frac{|-Q/A|}{2\epsilon_o} = \frac{Q}{A\epsilon_o}$$
 
-        to the left, so
-
-        $\ds\bfvec{E}=-\frac{Q}{A\epsilon_o}\ihat$
+        to the left, so $\ds\bfvec{E}=-\frac{Q}{A\epsilon_o}\ihat$ between the plates. The electric field is zero in all other regions.
         \else
         \vskip 36pt
         \fi
@@ -184,7 +182,7 @@ An equal and opposite amount of charge is placed on two conducting and parallel 
         \ifsolutions
         {\bf Answer}:
 
-        $$C = \frac{Q}{|\Delta V|} = \frac{Q}{\frac{Qd}{A\epsilon_o}}=\frac{\epsilon_oA}{d}$$
+        $$C = \frac{Q}{|\Delta V|} = \frac{Q}{V(d)-V(0)} = \frac{Q}{\frac{Qd}{A\epsilon_o}}=\frac{\epsilon_oA}{d}$$
         \else
         \vskip 36pt
         \fi
@@ -207,7 +205,7 @@ Charge placed on two spherical conducting shells, the cross--section of which is
 
 \input{figures/Spherical.tikz}
 
-It can be shown (see challenge questions below) that the surface at $r=a$ will have $-Q$ uniformly distributed on it, and the surface at $r=b$ will have $Q$ uniformly distributed on it. The inner surface of the inner conductor and the outer surface of the outer conductor will not have any charge.
+It can be shown (see challenge questions below) that the surface at $r=a$ will have $-Q$ uniformly distributed on it, and the surface at $r=b$ will have $Q$ uniformly distributed on it. Given this, we can conclude that the inner surface of the inner conductor and the outer surface of the outer conductor will not have any charge (why?).
 
 \begin{enumerate}
 
@@ -239,10 +237,10 @@ It can be shown (see challenge questions below) that the surface at $r=a$ will h
         \vskip 72pt
         \fi
 
-  \item (Review question) How much work would the electric field do on a positive charge $q_o$ that is moved from $r=a$ to $r=b$? What will be the change in electric potential energy?
+  \item (Review question) How much work would the electric field do on a charge $q$ that is moved from $r=a$ to $r=b$? What will be the change in electric potential energy?
 
         \ifsolutions
-        \textbf{Answer}: $-q_o(V(b)-V(a))$ and $q_o(V(b)-V(a))$.
+        \textbf{Answer}: $-q(V(b)-V(a))$ and $q(V(b)-V(a))$.
         \fi
 
 \end{enumerate}
@@ -262,7 +260,7 @@ Use Gauss's law and the fact that the electric field inside a conductor must be 
   \item[5.] there can be no charge on the inner surface of the inner conductor,
 
             \ifsolutions
-            \textbf{Answer}: A Gaussian sphere with a surface inside the inner conductor has $E=0$ on its surface (b/c $E$ inside a conductor is zero). Based on $\oint \bfvec{E}\bfcdot d\mathbf{l}=Q_{\text{encl}}/\epsilon_o$, this implies $Q_{\text{encl}}=0$. (Note that all charges must be on the surface of a conductor, so the only possible location for the charge is on the inner and outer surfaces.)
+            \textbf{Answer}: A Gaussian sphere of radius $r$ with a surface inside the inner conductor has $E=0$ on its surface (b/c $E$ inside a conductor is zero). It follows from $\oint \bfvec{E}\bfcdot d\bfvec{A}=Q_{\text{encl}}/\epsilon_o$ that $Q_{\text{encl}}=0$. (Note that all charges must be on the surface of a conductor, so the only possible location for the charge is on the inner and outer surfaces.)
             \else
             \vskip 120pt
             \fi
@@ -270,7 +268,7 @@ Use Gauss's law and the fact that the electric field inside a conductor must be 
   \item[6.] the charge on the inner surface of the outer conductor is $+Q$, and
 
             \ifsolutions
-            \textbf{Answer}: A Gaussian sphere with its surface inside the outer conductor has $E=0$ on its surface (b/c $E$ inside a conductor is zero). Based on $\oint \bfvec{E}\bfcdot d\mathbf{l}=Q_{\text{encl}}/\epsilon_o$, this implies $Q_{\text{encl}}=0$. We know the charge on the inner conductor must be $-Q$. To make the charge inside this sphere zero, we need $+Q$ on the inner surface of the inner conductor to get $Q_{\text{encl}}=0$.
+            \textbf{Answer}: A Gaussian sphere with its surface inside the outer conductor has $E=0$ on its surface (b/c $E$ inside a conductor is zero). Based on $\oint \bfvec{E}\bfcdot d\mathbf{\bfvec{A}}=Q_{\text{encl}}/\epsilon_o$, this implies $Q_{\text{encl}}=0$. The charge on the inner conductor was given as $-Q$. To make the charge inside this sphere zero ($Q_{\text{encl}}=0$), we need $+Q$ on the inner surface of the inner conductor.
             \else
             \vskip 120pt
             \fi
@@ -278,26 +276,23 @@ Use Gauss's law and the fact that the electric field inside a conductor must be 
   \item[7.] there is no charge on the outer surface of the outer conductor.
 
             \ifsolutions
-            \textbf{Answer}: If the total charge on the outer conductor is $+Q$ and all of it is on its inner surface, but conservation of charge, there is no charge on its outer surface. Recall that charges arrange themselves on a conductor to make the electric field inside all conductors zero. With this charge arrangement, the electric field due to the charges on the outer surface of the inner conductor cancels the electric field due to the charge on the inner surface of the outer conductor for $r>b$.
+            \textbf{Answer}: If the total charge on the outer conductor is $+Q$ and all of it is on its inner surface, but conservation of charge, there is no charge on its outer surface.
             \else
 
+            \newpage
             \fi
 
 \end{enumerate}
-
-\newpage
 
 \section{Cylindrical}
 
 Charge placed on two long cylindrical conducting shells, the cross--section of which is shown. Both shells have a thickness of $t$. The inner shell has an outer radius of $a$ and a net charge of $-Q$. The outer shell has an inner radius of $b$ and a net charge of $+Q$. Assume that $Q$ is positive and the cylinders have length $L$.
 
-\input{figures/Spherical.tikz}
-
 \input{figures/Cylinder_3D.tikz}
 
 \begin{enumerate}
 
-  \item How will the charges distribute on each surface? (Assume no charge appears on the ends of the cylinders and any surface charge is uniformly distributed.) That is, find the charge density on
+  \item What is the net charge and surface charge density on each surface? Assume the charges are uniformly distributed on long surfaces and that no charge appears on end surfaces. That is, find the charge density on
 
     \begin{itemize}
 
@@ -311,24 +306,34 @@ Charge placed on two long cylindrical conducting shells, the cross--section of w
 
     \end{itemize}
 
-        \ifsolutions
-        \textbf{Answer}:
-        \fi
+      \begin{itemize}
+
+        \item Net charge: $0$, $-Q$, $Q$, and $0$
+
+        \item Surface charge density: $\lambda$ = $0$, $-Q/2\pi a L$, $Q/2\pi b L$, $0$
+
+        \item Linear charge density: $\sigma$ = $0$, $-Q/L$, $Q/L$, $0$
+              See the cylindrical shell problem in the solutions for the Enclosed Charge activity for a discussion of why we can describe the charge density in terms of both surface and linear densities.
+
+      \end{itemize}
 
 \end{enumerate}
 
-\newpage
+\ifsolutions
+
+\else
 
 \input{figures/Spherical.tikz}
 
-The cross--section figure from previous page is repeated above.
+The cross--section figure from the previous page is repeated above.
+\fi
 
 \begin{enumerate}
 
   \item[2.] Given your answer to part 1. of this problem, what is the electric field in each of the five regions? (Hint: Use Gauss's law)
 
             \ifsolutions
-            \textbf{Answer}:
+            \textbf{Answer}: The field points in the radial direction and inward: $\ds E_r = -\frac{\lambda }{2\pi\epsilon_o}\frac{1}{r} = -\frac{Q/L}{2\pi\epsilon_o}\frac{1}{r}$
             \else
             \vskip 96pt
             \fi
@@ -336,7 +341,7 @@ The cross--section figure from previous page is repeated above.
   \item[3.] What is the electric potential difference, $V(b)-V(a)$, between the outer an inner cylinder? (Make sure the sign of your result matches your expectation based on the techniques covered in the last activity.)
 
             \ifsolutions
-            \textbf{Answer}:
+            \textbf{Answer}: $\ds V(b)-V(a) =  \frac{\lambda}{2\pi\epsilon_o}\ln(b/a) = \frac{Q/L}{2\pi\epsilon_o}\ln(b/a) $
             \else
             \vskip 96pt
             \fi
@@ -344,15 +349,11 @@ The cross--section figure from previous page is repeated above.
   \item[4.] Find the capacitance in terms of $\epsilon_o$, $L$, $a$, and $b$.
 
             \ifsolutions
-            \textbf{Answer}:
+            \textbf{Answer}: $\displaystyle C= \frac{Q}{V(b)-V(a)} = \frac{Q}{\frac{Q/L}{2\pi\epsilon_o}\ln(b/a)}=\frac{2\pi \epsilon_o L}{\ln(b/a)}$.
+
+            Note that sometimes the capacitance for this case is written in terms of capacitance per unit length: $\ds C/L=\frac{2\pi \epsilon_o}{\ln(b/a)}$.
             \else
             \vskip 120pt
-            \fi
-
-  \item[5.] How much work would the electric field do on a charge $q_o$ moved from $r=a$ to $r=b$? What would be the change in $q_o$'s electric potential energy?
-
-            \ifsolutions
-            \textbf{Answer}:
             \fi
 
 \end{enumerate}
